--- a/4 Ano/Ingenieria del Software I/Soluciones/Practica 2.lyx
+++ b/4 Ano/Ingenieria del Software I/Soluciones/Practica 2.lyx
@@ -14162,11 +14162,11 @@ Describa un sistema de iluminación consistente en una lámpara y dos botones.
 
 \begin_deeper
 \begin_layout Paragraph
-Solución
+Designaciones
 \end_layout
 
 \begin_layout Itemize
-Se presiona el botón 
+Se presiona un botón 
 \begin_inset Formula $\approx$
 \end_inset
 
@@ -14175,7 +14175,7 @@ Se presiona el botón
 press
 \color inherit
 .
- Enviroment controled.
+ Enviroment controlled.
  Shared.
 \end_layout
 
@@ -14189,7 +14189,7 @@ Se enciende la lampara
 on
 \color inherit
 .
- Machine controled.
+ Machine controlled.
  Shared.
 \end_layout
 
@@ -14203,12 +14203,19 @@ Se apaga la lampara
 off
 \color inherit
 .
- Machine controled.
+ Machine controlled.
  Shared.
 \end_layout
 
+\begin_layout Paragraph
+Statecharts
+\begin_inset Newline newline
+\end_inset
+
+
+\end_layout
+
 \begin_layout Standard
-\align center
 \begin_inset Graphics
 	filename Images/iluminacion.png
 	scale 22
@@ -14216,6 +14223,87 @@ off
 \end_inset
 
 
+\end_layout
+
+\begin_layout Paragraph
+CSP
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $DK\_LAMPARA=on\to off\to DK\_LAMPARA$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $DK\_BOTON=\overline{press}\to DK\_BOTON$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $DK\_BOTONERA=\stackrel[i=1]{2}{\parallel}i:DK\_BOTON$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $ON=\stackrel[i=1]{2}{\square}i.press\to\overline{off}\to SYSOFF$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $OFF=\stackrel[i=1]{2}{\square}i.press\to\overline{on}\to SYSON$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $ESPECIFICACION=on\to ON|off\to OFF$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $SISTEMA=DK\_LAMPARA\parallel DK\_BOTONERA\parallel ESPECIFICACION$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Paragraph
+TLA
+\end_layout
+
+\begin_layout Itemize
+COMPLETAR.
 \end_layout
 
 \end_deeper
@@ -14231,11 +14319,15 @@ Las puertas de los aeropuertos están provistas de un mecanismo que permite
 \end_inset
 
  unidades de tiempo, la puerta se cierra.
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \end_layout
 
 \begin_deeper
 \begin_layout Paragraph
-Solución
+Designaciones
 \end_layout
 
 \begin_layout Itemize
@@ -14248,7 +14340,7 @@ Se abre la puerta
 open
 \color inherit
 .
- Machine controled.
+ Machine controlled.
  Shared.
 \end_layout
 
@@ -14262,7 +14354,7 @@ Se cierra la puerta
 close
 \color inherit
 .
- Machine controled.
+ Machine controlled.
  Shared.
 \end_layout
 
@@ -14276,7 +14368,7 @@ Hay al menos una persona en la zona
 persona
 \color inherit
 .
- Enviroment controled.
+ Enviroment controlled.
  Unshared.
 \end_layout
 
@@ -14290,7 +14382,7 @@ Salen todas las personas de la zona
 nadie
 \color inherit
 .
- Enviroment controled.
+ Enviroment controlled.
  Unshared.
 \end_layout
 
@@ -14304,7 +14396,7 @@ El sensor detecta una persona
 sensor
 \color inherit
 .
- Enviroment controled.
+ Enviroment controlled.
  Shared.
 \end_layout
 
@@ -14320,15 +14412,43 @@ T
 .
 \end_layout
 
+\begin_layout Paragraph
+Designaciones
+\end_layout
+
+\begin_layout Standard
+COMPLETAR.
+\end_layout
+
+\begin_layout Paragraph
+Statecharts
+\end_layout
+
 \begin_layout Standard
 \align center
 \begin_inset Graphics
 	filename Images/aeropuerto.png
-	scale 21
+	scale 23
 
 \end_inset
 
 
+\end_layout
+
+\begin_layout Paragraph
+CSP
+\end_layout
+
+\begin_layout Itemize
+COMPLETAR.
+\end_layout
+
+\begin_layout Paragraph
+TLA
+\end_layout
+
+\begin_layout Itemize
+COMPLETAR.
 \end_layout
 
 \end_deeper
@@ -14342,18 +14462,139 @@ Describa el funcionamiento de un mouse de tres botones.
 
 \begin_deeper
 \begin_layout Paragraph
-Solución
+Designaciones
+\end_layout
+
+\begin_layout Standard
+COMPLETAR.
+\end_layout
+
+\begin_layout Paragraph
+Statecharts
 \end_layout
 
 \begin_layout Standard
 \align center
 \begin_inset Graphics
 	filename Images/mouse.png
-	scale 28
+	scale 20
 
 \end_inset
 
 
+\end_layout
+
+\begin_layout Paragraph
+CSP
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $DK\_BOTON=\overline{press}\to\overline{release}\to DK\_BOTON$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $DK\_MOUSE=\stackrel[i=1]{3}{\parallel}i:DK\_BOTON$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $\begin{aligned}DK\_PC= & \stackrel[i=1]{2}{\square}i.click\to DK\_PC\\
+ & \stackrel[i=1]{2}{\square}i.drag\to i.drop\to DK\_PC\\
+ & \enskip\square\,1.double\to DK\_PC
+\end{aligned}
+$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $PRESS=\stackrel[i=1]{2}{\square}i.press\to\left(RELEASE_{i}\overset{t1}{\triangleright}DRAG_{i}\right)$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $RELEASE_{1}=1.release\to\left(DOUBLE\overset{t2}{\triangleright}\overline{1.click}\to PRESS\right)$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $RELEASE_{2}=2.release\to\overline{2.click}\to PRESS$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $DOUBLE=1.press\to1.release\to\overline{1.double}\to PRESS$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $DRAG_{i}=\overline{i.drag}\to i.release\to\overline{i.drop}\to PRESS$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Itemize
+
+\color purple
+\begin_inset Formula $ESPECIFICACION=DK\_MOUSE\parallel DK\_PC\parallel PRESS$
+\end_inset
+
+
+\color inherit
+.
+\end_layout
+
+\begin_layout Paragraph
+TLA
+\end_layout
+
+\begin_layout Itemize
+COMPLETAR.
 \end_layout
 
 \end_deeper
@@ -14363,21 +14604,45 @@ vos electrónicos analógicos adosados a sus cuerpos mediante sensores de
  varias clases.
  A través de los sensores los dispositivos miden los signos vitales de los
  pacientes: un dispositivo mide el pulso, otro la temperatura, otro la presión
- sanguı́nea.
+ sanguínea.
 \end_layout
 
 \begin_deeper
 \begin_layout Standard
 Se necesita un programa que lea los signos vitales, con una frecuencia especific
 ada para cada paciente.
- Los factores leı́dos será comparados con rangos de seguridad especifica-
- dos para cada paciente y las lecturas que excedan dichos rangos serán reportada
-s con mensajes de alarma en el monitor del box de enfermerı́a.
+ Los factores leídos será comparados con rangos de seguridad especificados
+ para cada paciente y las lecturas que excedan dichos rangos serán reportadas
+ con mensajes de alarma en el monitor del box de enfermería.
  También debe mostrarse un mensaje apropiado si falla alguno de los dispositivos.
 \end_layout
 
 \begin_layout Paragraph
-Solución
+Designaciones
+\end_layout
+
+\begin_layout Standard
+COMPLETAR.
+\end_layout
+
+\begin_layout Paragraph
+Statecharts
+\end_layout
+
+\begin_layout Standard
+COMPLETAR.
+\end_layout
+
+\begin_layout Paragraph
+CSP
+\end_layout
+
+\begin_layout Standard
+COMPLETAR.
+\end_layout
+
+\begin_layout Paragraph
+TLA
 \end_layout
 
 \begin_layout Standard
